syntax = "proto3";
package com.github.douglsantos.domain.proto;

option java_outer_classname = "PedidosProto";

message Pedidos {
	repeated Pedido pedidos = 1;
}

message Pedido {
	string pedidoId = 1;
	Cliente cliente = 2;
}

message Cliente {
	string nome = 1;
}

message Produto {
	string produtoId = 1;
	string descricaoProduto = 2;
	string parceiro = 3;
	int32 valorUnitario = 4;
}